# baselines-lab3

./: README.md  pyproject.toml  setup.py
baselines_lab3/: __init__.py  run_algorithm.py  run_env_as_player.py  run_lab.py  run_stats.py  test.py
baselines_lab3/algorithms/: gym_maze_wrapper.py  particle_moving_algorithm.py
baselines_lab3/algorithms/gathering/: move_to_extreme_algorithm.py
baselines_lab3/algorithms/gathering/pair_merging/: pair_merging_algorithm.py  pair_selector.py
baselines_lab3/algorithms/preprocessing/: to_the_corners.py
baselines_lab3/algorithms/utils/: distance_map.py  extremes.py
baselines_lab3/env/: __init__.py  environment.py  evaluation.py
baselines_lab3/env/gym_maze/: __init__.py
baselines_lab3/env/gym_maze/envs/: __init__.py  maze_base.py
baselines_lab3/env/gym_maze/maze_generators/: __init__.py  rrt_generator.py
baselines_lab3/env/gym_maze/rewards/: __init__.py  (+3 more)
baselines_lab3/env/wrappers/: NoObsWrapper.py  VecImageRecorder.py  __init__.py  attribute_logger.py  curiosity.py  evaluation_wrappers.py  frame_skip.py  recurrent_action.py  wrappers.py
baselines_lab3/experiment/: __init__.py  optimization.py  runner.py  samplers.py  scheduler.py  session.py  slurm.py
baselines_lab3/model/: __init__.py  model.py  schedules.py
baselines_lab3/model/callbacks/: __init__.py  checkpoints.py  logger.py  obs_logger.py  render_logger.py
baselines_lab3/policies/: __init__.py  cnn_extractor.py  cnn_policy.py  combined_extractor.py  custom_policy.py  rnd_policy.py
baselines_lab3/utils/: __init__.py  config_util.py  env_util.py  numpy_json_encoder.py  recorder.py  tf_utils.py  util.py
baselines_lab3/utils/tables/: latex.py  table_generator.py
baselines_lab3/utils/tensorboard/: __init__.py  log_reader.py  plotter.py  training_info.py
config/: test.yml  test_breakout.yml  test_gathering.yml  test_search.yml  test_search_2.yml
